# lastfm-discord-presence

./: .gitignore  CMakeLists.txt  Dockerfile  PLAN.md  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: docker.yml
src/: lastfm.cpp  lastfm.h  main.cpp  store.cpp  store.h
